--- a/server/package.json
+++ b/server/package.json
@@ -16,6 +16,8 @@
     "bcrypt": "^5.1.1",
     "child_process": "^1.0.2",
     "cors": "^2.8.5",
+    "csv-parser": "^3.0.0",
+    "csv-writer": "^1.6.0",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
     "mysql2": "^3.11.5",
